giving bio image container a fixed height to remedy iphone se excessive white space

--- a/src/pages/About/SelfPortrait/SelfPortrait.module.scss
+++ b/src/pages/About/SelfPortrait/SelfPortrait.module.scss
@@ -1,5 +1,4 @@
 .portrait {
-    object-fit: contain;
     width: 900px;
     margin-left: -225px;
     padding: 0;
